syntax = "proto3";

option csharp_namespace = "ConverterService";

import "google/api/annotations.proto";

service GrpcConverter {
    rpc GetConversionResult (ConversionResultRequest) returns (ConversionResultResponse) {  
        option (google.api.http) = {
            get: "/api/v1/converter"
        };
    };
}

message ConversionResultRequest {
    string from_currency_code = 1;
    string to_currency_code = 2;
    string amount = 3;
}

message ConversionResultResponse {
    string converted_amount = 1;
    string reserved_converted_amount = 2;
}