syntax = "proto3";

option csharp_namespace = "CurrencyRateService";

service GrpcCurrencyRate {
    rpc GetRateFromTo (RateFromToRequest) returns (RateFromToResponse); 
}

message RateFromToRequest {
    string from_currency_code = 1;
    string to_currency_code = 2;
}

message RateFromToResponse {
    repeated GrpcCurrencyRateModel rates = 1;
}

message GrpcCurrencyRateModel {
    string currency_code = 1;
    string currency_name = 2;
    string rate_to_usd = 3;
    int64 updated_at = 7;
}